# sokolkol

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  compile_commands.json  q.sh  shd.h
src/: main.c
